--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -1,5 +1,6 @@
 .profile__description{
   margin: 0;
+  max-width: 280px;
   font-size: 18px;
   line-height: 22px;
   text-overflow: ellipsis;
@@ -8,11 +9,12 @@
   font-weight: 400;
 }
 
-@media screen and (max-width: 590px) {
+@media screen and (max-width: 768px) {
   .profile__description{
     font-size: 14px;
     line-height: 17px;
     text-align: center;
+    max-width: 220px;
   }
 }
 
