--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,5 +1,6 @@
 .profile__title{
   display: block;
+  max-width: 330px;
   margin: 0;
   margin-bottom: 16px;
   font-weight: 500;
@@ -10,12 +11,13 @@
   overflow: hidden;
 }
 
-@media screen and (max-width: 590px) {
+@media screen and (max-width: 768px) {
   .profile__title{
     font-size: 27px;
     line-height: 33px;
     text-align: center;
     margin-bottom: 8px;
+    max-width: 220px;
   }
 }
 
