--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -4,6 +4,9 @@
   margin-right: 20px;
   margin-bottom: 30px;
   transition: all ease .3s;
+  background-image: url(/images/Group.png);
+  border: none;
+  background-color: transparent;
 }
 
 .element__like:hover{
@@ -11,5 +14,5 @@
 }
 
 .element__like:active{
-  background-color: #000;
+  background-image: url(/images/Union.png);
 }
