--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -4,7 +4,7 @@
   margin-right: 20px;
   margin-bottom: 30px;
   transition: all ease .3s;
-  background-image: url(/images/Group.png);
+  background-image: url(../../../images/Group.png);
   border: none;
   background-color: transparent;
 }
