--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -7,6 +7,7 @@
   background-image: url(../../../images/Group.png);
   border: none;
   background-color: transparent;
+  background-repeat: no-repeat;
 }
 
 .element__like:hover{
@@ -16,3 +17,4 @@
 .element__like:active{
   background-image: url(../../../images/Union.png);
 }
+
