--- a/blocks/page/__wrapper/page__wrapper.css
+++ b/blocks/page/__wrapper/page__wrapper.css
@@ -4,6 +4,7 @@
   margin: auto;
   flex-direction: column;
   padding-top: 45px;
+  min-height: 100vh;
 }
 
 @media screen and (min-width: 1280px) {
