--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -4,15 +4,16 @@
   margin-right: 20px;
   margin-bottom: 30px;
   transition: all ease .3s;
-  background-image: url(../../../images/Group.png);
+  background-image: url(../../../images/like.svg);
   border: none;
   background-color: transparent;
+  background-repeat: no-repeat;
 }
 
 .element__like:hover{
-  opacity: .7;
+  opacity: .5;
 }
 
 .element__like:active{
-  background-image: url(/images/Union.png);
+  background-image: url(../../../images/Union.png);
 }
