--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -4,19 +4,24 @@
   right: -40px;
   cursor: pointer;
   transition: all ease .3s;
-  width: 32px;
-  height: 32px;
+  width: 40px;
+  height: 40px;
+  background-image: url(../../../images/Close\ Icon.svg);
+  background-size: 32px;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  border: none;
 }
 
 .popup__close:hover{
-  opacity: .7;
+  opacity: .6;
 }
 
 @media screen and (max-width: 550px) {
   .popup__close{
-    top: -40px;
     right: 0px;
     width: 20px;
     height: 20px;
+    background-size: 20px;
   }
 }
