--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -1,4 +1,5 @@
 .profile__description{
+  display: block;
   margin: 0;
   max-width: 280px;
   font-size: 18px;
@@ -11,9 +12,10 @@
 
 @media screen and (max-width: 768px) {
   .profile__description{
+    margin: auto;
+    text-align: center;
     font-size: 14px;
     line-height: 17px;
-    text-align: center;
     max-width: 220px;
   }
 }
