--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -4,16 +4,22 @@
   cursor: pointer;
   transition: all ease .3s;
   margin-left: 18px;
+  background-image: url(../../../images/Edit\ Button.svg);
+  background-size: 24px;
+  background-repeat: no-repeat;
+  background-color: transparent;
+  border: none;
 }
 
 .profile__edit:hover{
-  opacity: .7;
+  opacity: .6;
 }
 
 @media screen and (max-width: 768px) {
   .profile__edit{
     width: 18px;
     height: 18px;
+    background-size: 18px;
     margin-left: 10px;
   }
 }
