--- a/pages/index.css
+++ b/pages/index.css
@@ -2,11 +2,11 @@
 @import url(../fonts/fonts.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/page/__wrapper/page__wrapper.css);
-@import url(../blocks/page/_fixed/page_fixed.css);
+@import url(../blocks/main/main.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__image/header__image.css);
 @import url(../blocks/profile/profile.css);
-@import url(../blocks/profile/__left/profile__left.css);
+@import url(../blocks/profile/__user/profile__user.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__title/profile__title.css);
@@ -22,12 +22,14 @@
 @import url(../blocks/footer/__text/footer__text.css);
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__button/popup__button.css);
 @import url(../blocks/popup/__close/popup__close.css);
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__title/popup__title.css);
-@import url(../blocks/popup/__input/_description/popup__input_description.css);
-@import url(../blocks/popup/__input/_title/popup__input_title.css);
+@import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/popup/__input/_type/_description/popup__input_type_description.css);
+@import url(../blocks/popup/__input/_type/_title/popup__input_type_title.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 
 
