--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -6,7 +6,7 @@
   transition: all ease .3s;
   width: 40px;
   height: 40px;
-  background-image: url(../../../images/Close\ Icon.svg);
+  background-image: url(../../../images/Close-Icon.svg);
   background-size: 32px;
   background-color: transparent;
   background-repeat: no-repeat;
