--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -4,7 +4,7 @@
   cursor: pointer;
   transition: all ease .3s;
   margin-left: 18px;
-  background-image: url(../../../images/Edit\ Button.svg);
+  background-image: url(../../../images/Edit-Button.svg);
   background-size: 24px;
   background-repeat: no-repeat;
   background-color: transparent;
