--- a/blocks/element/__delete/element__delete.css
+++ b/blocks/element/__delete/element__delete.css
@@ -1,6 +1,6 @@
 .element__delete{
   position: absolute;
-  background-image: url(/images/Trash.svg);
+  background-image: url(../../../images/Trash.svg);
   top: 20px;
   right: 20px;
   width: 20px;
