--- a/blocks/popup-image/__container/popup-image__container.css
+++ b/blocks/popup-image/__container/popup-image__container.css
@@ -8,9 +8,16 @@
   margin-top: 50px;
 }
 
+@media screen and (min-width: 1440px) {
+  .popup-image__container{
+    margin-top: auto;
+  }
+}
+
 @media screen and (max-width: 550px) {
   .popup-image__container{
-    max-width: 75vw;
+    margin-top: auto;
+    min-width: 240px;
     max-height: 315px;
   }
 }
