--- a/blocks/popup-image/popup-image.css
+++ b/blocks/popup-image/popup-image.css
@@ -1,8 +1,11 @@
 .popup-image{
   position: fixed;
-  display: none;
+  display: flex;
   width: 100%;
+  visibility: hidden;
+  opacity: 0;
   height: 100vh;
   background-color: rgba(0, 0, 0, .9);
   z-index: 2;
+  transition: all ease .3s;
 }
