--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -3,6 +3,9 @@
   width: 100%;
   height: 100vh;
   background-color: rgba(0, 0, 0, .5);
-  display: none;
+  display: flex;
+  visibility: hidden;
+  opacity: 0;
+  transition: all ease .3s;
   z-index: 2;
 }
