--- a/blocks/popup/__input-error/_active/popup__input-error_active.css
+++ b/blocks/popup/__input-error/_active/popup__input-error_active.css
@@ -1,10 +1,3 @@
 .popup__input-error_active{
-  border-bottom-color: #FF0000;
-  color: #FF0000;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 15px;
-  margin: 0;
-  padding: 5px 0;
+  visibility: visible;
 }
