--- a/src/blocks/element/__title/element__title.css
+++ b/src/blocks/element/__title/element__title.css
@@ -5,9 +5,8 @@
   font-size: 24px;
   line-height: 29px;
   margin: 0;
-  margin-left: 20px;
-  margin-bottom: 26px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  margin-top: 0px;
 }
