--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,13 +1,26 @@
-.profile__avatar{
+.profile__avatar {
+  position: relative;
+  border-radius: 50%;
   width: 120px;
   height: 120px;
-  border-radius: 50%;
   margin-right: 30px;
+  background-color: transparent;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
-@media screen and (max-width: 768px) {
-  .profile__avatar{
-    margin-bottom: 28px;
-    margin-right: 0px;
-  }
+.profile__avatar:hover::before {
+  content:'';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  background-image: url(../../../images/redactor.svg);
+  background-size: 26px;
+  background-position: center;
+  background-repeat: no-repeat;
+  cursor: pointer;
 }
