bug-fix: element-like

--- a/src/blocks/element/__like/element__like.css
+++ b/src/blocks/element/__like/element__like.css
@@ -5,7 +5,7 @@
   background-image: url(../../../images/like.svg);
   border: none;
   background-color: transparent;
-  cursor: pointer;;
+  cursor: pointer;
 }
 
 .element__like:hover{
