--- a/src/blocks/header/__image/header__image.css
+++ b/src/blocks/header/__image/header__image.css
@@ -1,6 +1,12 @@
 .header__image{
   width: 142px;
   height: 33px;
+  cursor: pointer;
+  transition: all ease .3s;
+}
+
+.header__image:hover{
+  opacity: .8;
 }
 
 @media screen and (max-width: 550px) {
