--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,26 +1,6 @@
 .profile__avatar {
-  position: relative;
-  border-radius: 50%;
+  object-fit: cover;
   width: 120px;
   height: 120px;
-  margin-right: 30px;
-  background-color: transparent;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-.profile__avatar:hover::before {
-  content:'';
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.8);
-  background-image: url(../../../images/redactor.svg);
-  background-size: 26px;
-  background-position: center;
-  background-repeat: no-repeat;
-  cursor: pointer;
+  border-radius: 50%;
 }
